- Added placeholders to get members at a specific rank - Credit EarthCow (#542, #537)
- Added /teama ally and /teama neutral (#523)

Bug Fixes:
- Fixed issue with urls causing a 404 - Credit Ceymikey (#522)
- Fixed bug with /team setowner - Credit EarthCow(#544, #531)

4.9.0:

Features:
- Added chat prefix to go from global to team or ally chat - Credit EarthCow (#545, #314)
	- ! is for team chat, ? is for ally chat. Both are configurable by administrators
- Added placeholders for positionscore, positionbal and positionmembmers, to show the teams position within the leaderboard - Credit EarthCow (#549, #538)
- Added further functionality to the /teama teleport command - Teleport all teams home, teleport everyone in a team to a given location etc. - Credit EarthCow (#550, #534)
- Added the ability to /teama purge a team's balance as well as score (#521)
- Added pages to help messages and hover command suggestions (#310 #374)
- Added support for clickable invite messages (#423)
- Added support for banning color codes in /team color (#414)

Improvements:
- Replaced %s with {0}, {1} etc. in messages.yml for clearer usage and support for reordering of placeholders - Credit EarthCow (#551, #169)
- Support translation of command arguments (#553)
- Support the translation of admin commands
- Color player names in /team info based on if they are online (#469)


4.9.1:

Improvements: 
- Improved /teama version output

Bug Fixes:
- Fixed offline players not being targeted for /teama leave - Credit EarthCow (#557)
- Fixed /team help not showing any commands when the player is not op (#564)
- Removed missed debug output

4.9.2

Improvements:
- File name now includes version number - Credit ItzSave (#573)

Bug Fixes:
- Fixed Bug causing vanished players to be shown as online in /team info and /team invite - Credit Hellinduction (#567, #525)

Headings: 
Features: 

Improvements:

Bug Fixes: 
