@@ -59,7 +59,11 @@ public class MCTeamManagement implements Listener {
 		BelowNameChangeEvent event = new BelowNameChangeEvent(player, ChangeType.ADD);
 		Bukkit.getPluginManager().callEvent(event);
 
-		team.getScoreboardTeam(board).addEntry(player.getName());
+		try {
+			team.getScoreboardTeam(board).addEntry(player.getName());
+		} catch (IllegalStateException e) {
+			Bukkit.getLogger().severe("Could not register the team name in the tab menu due to a conflict, see https://github.com/booksaw/BetterTeams/wiki/Managing-the-TAB-Menu error:" + e.getMessage());
+		}
 
 	}
 
